# csi_realtime_plot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install_requirements-ubuntu.sh  memo.md
cli/: main.cpp  nexdecode.cpp  nexlive.cpp
plt/: plot.plt
src/: csi_capture.cpp  csi_capture.hpp  csi_reader.cpp  csi_reader.hpp  csi_reader_func.cpp  csi_reader_func.hpp  csi_realtime_graph.cpp  csi_realtime_graph.hpp  sample.cpp
